P1-L9 Discretization: Rename Number of Bins to Number of Dimensions - Perform the rename to avoid confusion

--- a/assignments/P1-Intro/L9-RL-in-Continuous-Spaces/Discretization/Discretization.ipynb
+++ b/assignments/P1-Intro/L9-RL-in-Continuous-Spaces/Discretization/Discretization.ipynb
@@ -276,16 +276,16 @@
      "output_type": "stream",
      "text": [
       "State space samples:\n",
-      "[[-0.194 -0.031]\n",
-      " [-1.     0.068]\n",
-      " [-0.097  0.008]\n",
-      " [-0.898  0.02 ]\n",
-      " [ 0.532  0.01 ]\n",
-      " [-1.003  0.015]\n",
-      " [-0.698  0.054]\n",
-      " [-0.268  0.026]\n",
-      " [ 0.499  0.013]\n",
-      " [-0.705  0.015]]\n"
+      "[[ 0.315  0.009]\n",
+      " [-0.401  0.028]\n",
+      " [-0.739  0.035]\n",
+      " [-1.072 -0.041]\n",
+      " [-0.644  0.048]\n",
+      " [ 0.596  0.003]\n",
+      " [-0.409  0.004]\n",
+      " [-0.708 -0.013]\n",
+      " [-0.281  0.022]\n",
+      " [-0.931  0.024]]\n"
      ]
     }
    ],
@@ -306,7 +306,7 @@
      "text": [
       "Action space: Discrete(3)\n",
       "Action space samples:\n",
-      "[2 0 0 0 2 2 0 0 0 0]\n"
+      "[0 2 0 0 2 1 1 0 1 1]\n"
      ]
     }
    ],
@@ -373,15 +373,15 @@
     "        A list of arrays containing split points for each dimension.\n",
     "    \"\"\"\n",
     "    # TODO: Implement this\n",
-    "    num_bins = len(bins)\n",
-    "    l = [0.0] * num_bins\n",
-    "    h = [0.0] * num_bins\n",
-    "    for i in range(num_bins):\n",
+    "    num_dimensions = len(bins)\n",
+    "    l = [0.0] * num_dimensions\n",
+    "    h = [0.0] * num_dimensions\n",
+    "    for i in range(num_dimensions):\n",
     "        d = (high[i] - low[i]) / bins[i]\n",
     "        l[i] = low[i] + d\n",
     "        h[i] = high[i] - d\n",
     "    \n",
-    "    return [np.linspace(l[i], h[i], num=bins[i]-1) for i in range(num_bins)]\n",
+    "    return [np.linspace(l[i], h[i], num=bins[i]-1) for i in range(num_dimensions)]\n",
     "\n",
     "\n",
     "low = [-1.0, -5.0]\n",
