--- a/p1_navigation/Navigation.ipynb
+++ b/p1_navigation/Navigation.ipynb
@@ -224,7 +224,7 @@
     {
      "data": {
       "text/plain": [
-       "<unityagents.brain.BrainParameters at 0x7fefad502b70>"
+       "<unityagents.brain.BrainParameters at 0x7f0743bbc160>"
       ]
      },
      "execution_count": 10,
@@ -762,8 +762,7 @@
     "        if np.mean(scores_window)>=13.0:\n",
     "            print('\\nEnvironment solved in {:d} episodes!\\tAverage Score: {:.2f}'.format(\n",
     "                  i_episode-100, np.mean(scores_window)))\n",
-    "            # use different method of saving below\n",
-    "            # torch.save(agent.qnetwork_local.state_dict(), 'checkpoint.pth')\n",
+    "            torch.save(agent.qnetwork_local.state_dict(), 'checkpoint.pth')\n",
     "            break\n",
     "    return scores\n",
     "\n",
@@ -844,13 +843,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "checkpoint = {'state_size': state_size,\n",
-    "              'action_size': action_size,\n",
-    "              'fc1_units': 512,\n",
-    "              'fc2_units': 64,\n",
-    "              'state_dict': agent.qnetwork_local.state_dict()}\n",
+    "saved_model = {'state_size': state_size,\n",
+    "               'action_size': action_size,\n",
+    "               'fc1_units': 512,\n",
+    "               'fc2_units': 64,\n",
+    "               'state_dict': agent.qnetwork_local.state_dict()}\n",
     "\n",
-    "torch.save(checkpoint, './models/checkpoint.pth')"
+    "torch.save(saved_model, './models/saved_model.pth')"
    ]
   },
   {
@@ -875,14 +874,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def load_checkpoint(filepath, device):\n",
-    "    checkpoint = torch.load(filepath)\n",
-    "    qnetwork = QNetwork(state_size=checkpoint['state_size'], \n",
-    "                        action_size=checkpoint['action_size'], \n",
+    "def load_saved_model(filepath, device):\n",
+    "    saved_model = torch.load(filepath)\n",
+    "    qnetwork = QNetwork(state_size=saved_model['state_size'], \n",
+    "                        action_size=saved_model['action_size'], \n",
     "                        seed=0,\n",
-    "                        fc1_units=checkpoint['fc1_units'],\n",
-    "                        fc2_units=checkpoint['fc2_units']).to(device)\n",
-    "    qnetwork.load_state_dict(checkpoint['state_dict'])\n",
+    "                        fc1_units=saved_model['fc1_units'],\n",
+    "                        fc2_units=saved_model['fc2_units']).to(device)\n",
+    "    qnetwork.load_state_dict(saved_model['state_dict'])\n",
     "    \n",
     "    return qnetwork"
    ]
@@ -948,7 +947,7 @@
     }
    ],
    "source": [
-    "qnetwork = load_checkpoint('./models/checkpoint.pth', device)\n",
+    "qnetwork = load_saved_model('./models/saved_model.pth', device)\n",
     "qnetwork.eval()"
    ]
   },
@@ -1012,7 +1011,7 @@
     "state = env_info.vector_observations[0]            # get the current state\n",
     "score = 0                                          # initialize the score\n",
     "while True:\n",
-    "    action = agent.act(state, eps=0.1)                 # select an action\n",
+    "    action = agent.act(state, eps=0.1)             # select an action\n",
     "    env_info = env.step(action)[brain_name]        # send the action to the environment\n",
     "    next_state = env_info.vector_observations[0]   # get the next state\n",
     "    reward = env_info.rewards[0]                   # get the reward\n",
@@ -1133,7 +1132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
