P3-L3 Add REINFORCE Algorithm

--- a/assignments/P3-Policy-Based-Methods/L3-Policy-Gradient-Methods/reinforce/REINFORCE.ipynb
+++ b/assignments/P3-Policy-Based-Methods/L3-Policy-Gradient-Methods/reinforce/REINFORCE.ipynb
@@ -279,6 +279,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "REINFORCE algorithm.[1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![REINFORCE Algorithm](./images/reinforce-algo.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Implementation of REINFORCE algorithm where $m$ = 1."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 43,
    "metadata": {},
@@ -683,6 +704,20 @@
    "source": [
     "%%bash\n",
     "pip freeze"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## References"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`[1]` Udacity. _REINFORCE_. Deep Reinforcement Learning for Enterprise Nanodegree Program, Part 3, Lesson 3. 2019."
    ]
   }
  ],
