P3-L4 Improve Pong REINFORCE Code - Use local surrogate function

--- a/assignments/P3-Policy-Based-Methods/L4-Proximal-Policy-Optimization/pong-REINFORCE.ipynb
+++ b/assignments/P3-Policy-Based-Methods/L4-Proximal-Policy-Optimization/pong-REINFORCE.ipynb
@@ -292,10 +292,8 @@
     "        return self.sig(x)\n",
     "\n",
     "# use your own policy!\n",
-    "# policy=Policy().to(device)\n",
-    "\n",
-    "\n",
     "policy=Policy().to(device)\n",
+    "# policy=pong_utils.Policy().to(device)\n",
     "\n",
     "# we use the adam optimizer with learning rate 2e-4\n",
     "# optim.SGD is also possible\n",
@@ -871,14 +869,25 @@
     "    ## WRITE YOUR OWN CODE HERE\n",
     "    ##\n",
     "    ########\n",
+    "    discount = discount ** np.arange(len(rewards))\n",
+    "    rewards = np.asarray(rewards) * discount[:,np.newaxis]\n",
     "    \n",
+    "    # convert rewards to future rewards\n",
+    "    rewards_future = rewards[::-1].cumsum(axis=0)[::-1]\n",
+    "    mean = np.mean(rewards_future, axis=1)\n",
+    "    std = np.std(rewards_future, axis=1) + 1.0e-10\n",
+    "    rewards_normalized = (rewards_future - mean[:,np.newaxis])/std[:,np.newaxis]\n",
+    "    \n",
+    "    # convert to tensor\n",
     "    actions = torch.tensor(actions, dtype=torch.int8, device=device)\n",
     "    old_probs = torch.tensor(old_probs, dtype=torch.float, device=device)\n",
+    "    rewards = torch.tensor(rewards_normalized, dtype=torch.float, device=device)\n",
     "\n",
-    "    \n",
     "    # convert states to policy (or probability)\n",
     "    new_probs = pong_utils.states_to_prob(policy, states)\n",
     "    new_probs = torch.where(actions == pong_utils.RIGHT, new_probs, 1.0-new_probs)\n",
+    "    \n",
+    "    ratio = new_probs / old_probs\n",
     "\n",
     "    # include a regularization term\n",
     "    # this steers new_policy towards 0.5\n",
@@ -888,7 +897,7 @@
     "    entropy = -(new_probs*torch.log(old_probs+1.e-10)+ \\\n",
     "        (1.0-new_probs)*torch.log(1.0-old_probs+1.e-10))\n",
     "\n",
-    "    return torch.mean(beta*entropy)\n",
+    "    return torch.mean((rewards * ratio) + (beta * entropy))\n",
     "\n",
     "\n",
     "Lsur= surrogate(policy, prob, state, action, reward)\n",
@@ -1678,12 +1687,10 @@
     }
    ],
    "source": [
-    "from parallelEnv import parallelEnv\n",
-    "import numpy as np\n",
     "# WARNING: running through all 800 episodes will take 30-45 minutes\n",
     "\n",
     "# training loop max iterations\n",
-    "episode = 1000\n",
+    "episode = 1000 # 500\n",
     "# episode = 800\n",
     "\n",
     "# widget bar to display progress\n",
@@ -1694,7 +1701,7 @@
     "timer = pb.ProgressBar(widgets=widget, maxval=episode).start()\n",
     "\n",
     "# initialize environment\n",
-    "envs = parallelEnv('PongDeterministic-v4', n=8, seed=1234)\n",
+    "envs = pong_utils.parallelEnv('PongDeterministic-v4', n=8, seed=1234)\n",
     "\n",
     "discount_rate = .99\n",
     "beta = .01\n",
@@ -1714,10 +1721,10 @@
     "\n",
     "    # this is the SOLUTION!\n",
     "    # use your own surrogate function\n",
-    "    # L = -surrogate(policy, old_probs, states, actions, rewards, beta=beta)\n",
-    "    \n",
-    "    L = -pong_utils.surrogate(policy, old_probs, states, actions, rewards, \n",
-    "                              discount=discount_rate,  beta=beta)\n",
+    "    L = -surrogate(policy, old_probs, states, actions, rewards, \n",
+    "                   discount=discount_rate, beta=beta)\n",
+    "    # L = -pong_utils.surrogate(policy, old_probs, states, actions, rewards, \n",
+    "    #                           discount=discount_rate, beta=beta)\n",
     "    optimizer.zero_grad()\n",
     "    L.backward()\n",
     "    optimizer.step()\n",
@@ -3266,8 +3273,6 @@
     }
    ],
    "source": [
-    "RIGHT=4\n",
-    "LEFT=5\n",
     "time=2000\n",
     "nrand=5\n",
     "\n",
@@ -3283,7 +3288,8 @@
     "    display.clear_output(wait=True)\n",
     "    \n",
     "    env.render()\n",
-    "    frame1, reward1, is_done, _ = env.step(np.random.choice([RIGHT,LEFT]))\n",
+    "    frame1, reward1, is_done, _ = env.step(np.random.choice(\n",
+    "        [pong_utils.RIGHT,pong_utils.LEFT]))\n",
     "    frame2, reward2, is_done, _ = env.step(0)\n",
     "\n",
     "for _ in range(time):\n",
@@ -3296,7 +3302,7 @@
     "\n",
     "    env.render()\n",
     "    # RIGHT = 4, LEFT = 5\n",
-    "    action = RIGHT if rand.random() < prob else LEFT\n",
+    "    action = pong_utils.RIGHT if rand.random() < prob else pong_utils.LEFT\n",
     "    frame1, _, is_done, _ = env.step(action)\n",
     "    frame2, _, is_done, _ = env.step(0)\n",
     "\n",
@@ -3312,8 +3318,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "RIGHT=4\n",
-    "LEFT=5\n",
     "time=2000\n",
     "nrand=5\n",
     "\n",
@@ -3323,7 +3327,8 @@
     "# perform nrand random steps in the beginning\n",
     "for _ in range(nrand):\n",
     "    env.render()\n",
-    "    frame1, reward1, is_done, _ = env.step(np.random.choice([RIGHT,LEFT]))\n",
+    "    frame1, reward1, is_done, _ = env.step(np.random.choice(\n",
+    "        [pong_utils.RIGHT,pong_utils.LEFT]))\n",
     "    frame2, reward2, is_done, _ = env.step(0)\n",
     "\n",
     "for _ in range(time):\n",
@@ -3332,7 +3337,7 @@
     "\n",
     "    env.render()\n",
     "    # RIGHT = 4, LEFT = 5\n",
-    "    action = RIGHT if rand.random() < prob else LEFT\n",
+    "    action = pong_utils.RIGHT if rand.random() < prob else pong_utils.LEFT\n",
     "    frame1, _, is_done, _ = env.step(action)\n",
     "    frame2, _, is_done, _ = env.step(0)\n",
     "\n",
