--- a/assignments/P2-Value-Based-Methods/L2-Deep-Q-Networks/exercise/Deep_Q_Network.ipynb
+++ b/assignments/P2-Value-Based-Methods/L2-Deep-Q-Networks/exercise/Deep_Q_Network.ipynb
@@ -474,13 +474,17 @@
     "              device=device)\n",
     "\n",
     "# watch an untrained agent\n",
+    "plt.figure(figsize=(10,10))\n",
     "state = env.reset()\n",
-    "for j in range(200):\n",
+    "img = plt.imshow(env.render(mode='rgb_array')) # only call this once\n",
+    "for _ in range(300):\n",
+    "    img.set_data(env.render(mode='rgb_array')) # just update the data\n",
+    "    display.display(plt.gcf())\n",
+    "    display.clear_output(wait=True)\n",
     "    action = agent.act(state)\n",
-    "    env.render()\n",
     "    state, reward, done, _ = env.step(action)\n",
     "    if done:\n",
-    "        break \n",
+    "        break\n",
     "        \n",
     "env.close()"
    ]
@@ -1079,7 +1083,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
